--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-body, h2 {
+body, p, h2 {
     margin: 0;
     padding: 0;
 }
@@ -30,6 +30,10 @@ body > div {
 
 .profile {
     width: 30px;
+}
+
+.profileLarge {
+    width: 50px;
     margin-right: 10px;
 }
 
@@ -58,6 +62,7 @@ body > div {
     padding: 0;
     list-style-type: none;
     display: grid;
+    gap: 15px;
 }
 
 ul > li {
@@ -72,14 +77,14 @@ ul > li {
     position: relative;
     grid-area: 1 / 2 / 1 / 3;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 5px 6px -4px;
-
+    gap: 10px;
     display: grid;
     grid-template-rows: 1fr 2fr;
 }
 
 .topNavigation {
     display: grid;
-    grid-template-columns: 35px 15fr auto 35px 1fr 1fr;
+    grid-template-columns: 35px 15fr auto 35px 35px 1fr;
     gap: 10px;
     align-items: center;
 }
@@ -96,10 +101,38 @@ ul > li {
 
 .topNavigation > p {
     font-weight: bold;
-    margin: 0;
+    justify-self: left;
+}
+
+.controlSection {
+    display: grid;
+    grid-template-columns: 80px 10fr auto 1fr 1fr 1fr;
+}
+
+.Greeting {
+   align-self: center;
+}
+
+.Greeting > p {
+    font-size: smaller;
+    font-weight: bold;
+}
+
+button {
+    background-color: rgb(2, 105, 169);
+    color: white;
+    border: none;
+    border-radius: 10px;
+    height: 30px;
+    width: 100px;
+    margin: 5px;
+    align-self: center;
+
 }
 
 .content {
     grid-area: 2 / 2 / 3 / 3;
     background-color: lightgray;
+    align-items: center;
 }
+
