--- a/styles.css
+++ b/styles.css
@@ -139,14 +139,21 @@ button {
     grid-template-columns: 3fr 1fr;
 }
 
+.cardlist {
+    margin-right: 20px;
+    display: grid; 
+    grid-template-columns: auto auto;
+    gap: 15px;
+    align-items:start;
+}
+
 .card {
     background-color: white;
     padding: 25px 10px 5px 20px;
     border-left: 5px orange solid;
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.3) 5px 5px 6px -4px;
-    max-width: 300px;
-    height: 150px;
+    height: 120px;
 
     display: grid;
     gap: 5px;
